[package]
name = "dotodo"
version = "0.4.1"
edition = "2021"
description = "Do your todos!"
repository = "https://github.com/SleepySwords/do_todo/"
license = "MIT"
keywords = ["todo", "organisation", "tasks"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.27", features = ["serde"] }
dirs = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
tui = { package = "ratatui", version = "0.26.0", features = ["serde"]}
tui-textarea = { version = "0.4.0", features = ["crossterm", "ratatui"], default-features=false }
itertools = "0.10.5"
lazy_static = "1.4.0"
serde_with = "3.6.1"


# Using textwrap for now until tui-rs implements more general wrapping for widgets such as Tables.
# This somewhat limits styling capabilities, as the wrapping is applied to strings, not tui::text::Text
# However it should be fine with the current use case
textwrap = { version = "0.15" }
unicode-segmentation = "1.10.0"

thiserror = "1.0.48"


[[bin]]
bench = false
name = "dotodo"
path = "src/main.rs"
