[package]
name = "dotodo"
version = "0.4.1"
edition = "2021"
description = "Do your todos!"
repository = "https://github.com/SleepySwords/do_todo/"
license = "MIT"
keywords = ["todo", "organisation", "tasks"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
dirs = "5.0.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
serde_json = "1.0"
tui = { package = "ratatui", version = "0.28.1", features = ["serde"]}
tui-textarea = { version = "0.6.1", features = ["crossterm", "ratatui"], default-features=false }
itertools = "0.10.5"
lazy_static = "1.4.0"
serde_with = "3.6.1"

time = { version = "0.3", features = ["serde", "formatting"] }
uuid = {version = "1.3.1", features = ["v4", "fast-rng"]}

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"

reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.39.2", features = ["full"] }
serde_urlencoded = "0.7.1"
futures-util = "0.3.30"
futures = "0.3.30"

enum_dispatch = "0.3.13"

unicode-segmentation = "1.10.0"

thiserror = "1.0.48"


[[bin]]
bench = false
name = "dotodo"
path = "src/main.rs"
